# libstreams

./: .krazy  CMakeLists.txt  LibStreamsConfig.cmake.in  StrigiConfig.cmake.in  strigiconfig.h.cmake
include/strigi/: archivereader.h  bufferedstream.h  bz2inputstream.h  dataeventinputstream.h  kmpsearcher.h  lzmainputstream.h  streambuffer.h  stringterminatedsubstream.h  substreamprovider.h
lib/: CMakeLists.txt  dataeventinputstream.cpp  fileinputstream.cpp  filestreamopener.cpp  gzipinputstream.cpp  libstreams.pc.cmake  listinginprogress.cpp  mailinputstream.cpp  oleinputstream.cpp  sdfinputstream.cpp  signatureinputstream.h  skippingfileinputstream.cpp  skippingfileinputstream2.cpp  strigiconfig.cpp  stringreader.h  tarinputstream.cpp  textutils.cpp
tests/api/: ArchiveReaderTest.cpp  CMakeLists.txt
tests/sharedtestcode/: unknownsizestream.h
